web-infras/parser/tests/fixtures/babel/es2015/arrow-functions/comma-after-rest-param/output.txt
[SyntaxError]: Unexpected trailing comma after rest element. (1,14)
1|(...rest,) => {}
 |            ^
